welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:3: error: ';' expected but 'if' found.
}	if(estFaceMur){
        ^